# intelligent-svd

./: .gitignore  README.md  RESEARCH_PLAN.md  RESULTS.md  paper.tex  pyproject.toml  references.bib
examples/: quick_demo.py
experiments/: exp01_factual_accuracy.py  exp02_overparam_sweep.py  exp03_qwen_compress.py  exp04_quant_stack.py  exp05_layer_sensitivity.py  exp06_scale_test.py  exp07_svd_quant_benchmark.py  exp11_full_benchmark.py  exp16_conflicting_data.py  exp18_knowledge_protection.py  exp21_cf90_hierarchical.py  exp_d_cf90_quant_pipeline.py  run_final_validation.py  run_llama_validation.py
experiments/cross_behavioral/: __init__.py  analyze.py  evaluators.py  probes.py  run_sweep.py  validate_pipeline.py
results/32b_benchmarks/: results.json
results/compression_sweep/: results.json
results/conflict_test/: results.json
results/curriculum_test/: results.json
results/final_validation/: experiment_a_svd90_vs_baseline.json  experiment_b_cf90_vs_lora.json  experiment_c_protection.json  experiment_d_cf90_quant_pipeline.json
results/freeze_test/: results.json
results/full_benchmark/: all_results.json  results_baseline_2026-01-27T12-35-56.787372.json  results_svd85_2026-01-27T13-16-05.118811.json  results_svd88_2026-01-27T13-08-01.736567.json  results_svd90_2026-01-27T13-00-06.405464.json  results_svd92_2026-01-27T12-51-56.941889.json  results_svd95_2026-01-27T12-44-01.338763.json
results/llama_validation/: experiment_c_llama.json  experiment_d_llama.json
results/optimal_search/: all_results.json  results_svd70_2026-01-27T13-42-47.947252.json  results_svd75_2026-01-27T13-34-55.647711.json  (+1 more)
src/intelligent_svd/: __init__.py  (+5 more)
tests/: test_core.py
(+2 files in other folders)
