[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "intelligent-svd"
version = "0.1.0"
description = "Knowledge-preserving SVD compression for large language models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bryan Sanchez"},
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "datasets",
    "safetensors",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
eval = [
    "lm-eval>=0.4",
]
apple = [
    "mlx>=0.5",
    "mlx-lm>=0.5",
]
dev = [
    "lm-eval>=0.4",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
