[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-svd"
version = "0.1.0"
description = "Knowledge-preserving SVD compression for large language models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bryan Sanchez"},
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "datasets",
    "safetensors",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
eval = [
    "lm-eval>=0.4",
]
apple = [
    "mlx>=0.5",
    "mlx-lm>=0.5",
]
audit = [
    "rho-eval>=2.2",
]
dev = [
    "lm-eval>=0.4",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require model downloads or GPU (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
where = ["src"]
